--- a/kadai3.html
+++ b/kadai3.html
@@ -3,7 +3,7 @@
 <html>
    <head>
         <meta charset="utf-8">
-       <title>演習１</title>
+       <title>課題３</title>
        <link rel="stylesheet" type="text/css" href="css/kadai3.css">
     </head>
     
